# IntuitiveCarePS

./: .gitignore  README.md
teste_1/: a.sh  pyproject.toml  teste_1.py
teste_2/: a.sh  pyproject.toml  teste_2.py
teste_3/: a.sh  pyproject.toml  teste_3.py  teste_3.sql
teste_4/backend/: a.sh  pyproject.toml  teste_4.py
teste_4/frontend/: package-lock.json  package.json
teste_4/frontend/teste_4/: .eslintrc.json  README.md  package-lock.json  package.json
teste_4/frontend/teste_4/src/: App.vue  main.js
teste_4/frontend/teste_4/src/components/: Home.vue
teste_4/frontend/teste_4/src/router/: index.js
