[project]
name = "teste-3"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorECarvalho",email = "victorelitt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "regex (>=2024.11.6,<2025.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
