[project]
name = "teste-4"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorECarvalho",email = "victorelitt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
